# open-wallpaper-engine

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Image.hpp  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.hpp  Type.hpp  WPCommon.hpp  WPJson.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPParticleParser.cpp  WPParticleParser.hpp  WPPkgFs.hpp  WPPuppet.hpp  WPSceneParser.cpp  WPSceneParser.hpp  WPShaderParser.cpp  WPShaderParser.hpp  WPShaderValueUpdater.cpp  WPShaderValueUpdater.hpp  WPSoundParser.cpp  WPSoundParser.hpp  WPTexImageParser.cpp  WPTexImageParser.hpp
src/Audio/: AudioResponseAnalyzerVdsp.cpp  AudioResponseAnalyzerVdsp.hpp  AudioResponseService.cpp  CMakeLists.txt  FfmpegSoundStream.cpp  FfmpegSoundStream.hpp  SoundManager.cpp  miniaudio-wrapper.hpp
src/Audio/include/Audio/: SampleMath.h  SoundManager.h
src/Interface/: ISceneParser.h  IShaderValueUpdater.h
src/Looper/: Looper.cpp
src/Particle/: ParticleEmitter.cpp  (+1 more)
tests/: CMakeLists.txt  mdl_schema_tests.cpp  media_thumbnail_texture_smoke.cpp  mouse_input_test.cpp  particle_mouse_controlpoint_test.cpp  rendergraph_smoke.cpp  rust_shader_bridge_test.cpp  scene_mesh_tests.cpp  scene_schema_tests.cpp  scenescript_media_event_smoke.cpp  scenescript_sound_layer_smoke.cpp  script_runtime_compat_test.cpp  shader_cache_metadata_test.cpp  shader_preprocessor_compat_test.cpp  tex_schema_tests.cpp  text_object_runtime_test.cpp  unpack_shader_compile_smoke.cpp  video_texture_submission_smoke.cpp  vulkan_render_batch_planner_smoke.cpp  vulkan_sample_count_smoke.cpp
(+131 files in other folders)
