set(LIB_NAME wpAudio)

add_library(${LIB_NAME}
    STATIC
    AudioResponseAnalyzerVdsp.cpp
    AudioResponseService.cpp
    FfmpegSoundStream.cpp
    SoundManager.cpp
)

target_link_libraries(${LIB_NAME}
PUBLIC
    wpUtils
PRIVATE
    wpFs
    PkgConfig::AVFORMAT
    PkgConfig::AVCODEC
    PkgConfig::AVUTIL
    PkgConfig::SWRESAMPLE
    miniaudio
)
target_include_directories(${LIB_NAME} PUBLIC include PRIVATE include/Audio)
target_compile_options(${LIB_NAME} PRIVATE ${warn_opts})
if(BUILD_TESTS)
    target_compile_definitions(${LIB_NAME} PRIVATE WESCENE_BUILD_TESTS=1)
endif()
set_property(TARGET ${LIB_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
